master - fixed width problem on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,7 +12,8 @@
 .about-text{
     font-size: 1.25em;
     line-height: 1.25em;
-    text-align: center
+    text-align: center;
+    width: 90%;
 }
 
 .about-text p {
@@ -36,6 +37,7 @@
     text-align: center;
     font-family: var(--ff-mono);
     padding: .75em;
+    width: 100%;
 }
 
 .header p, header a {
